--- a/IA_Algoritmos_de_Busca.ipynb
+++ b/IA_Algoritmos_de_Busca.ipynb
@@ -215,7 +215,7 @@
         "    for i in range(len(caminho)-1):\n",
         "        u, v = caminho[i], caminho[i+1]\n",
         "        custo += G[u][v]['weight']\n",
-        "    return custo"
+        "    return custo\n"
       ]
     },
     {
