added progress bar

--- a/trab2/trab2.ipynb
+++ b/trab2/trab2.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "sdnQDwnTiFDL"
       },
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "q15dV5KaE2YU"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "5pnHjBx7ho_M"
       },
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "dXqFqtOzoDKF"
       },
@@ -169,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "MBaFXjokwxR-"
       },
@@ -200,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "cV-59YdMty5f"
       },
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "0-rB8g_KJFvb"
       },
@@ -249,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "-hs6-Gy6m_GE"
       },
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "e5plsCDp9Eha"
       },
@@ -288,7 +288,7 @@
         "    history = []\n",
         "    # solucao inicial\n",
         "    solucao_inicial = solucao_aleatoria(tsp)\n",
-        "    print(solucao_inicial)\n",
+        "    # print(solucao_inicial)\n",
         "    # melhor solucao ate o momento\n",
         "    solucao_melhor, custo_melhor = obtem_melhor_vizinho(tsp, solucao_inicial)\n",
         "    \n",
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -359,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -441,7 +441,7 @@
         "        if new_distance < best_distance:\n",
         "            best_route = new_route\n",
         "            best_distance = new_distance\n",
-        "            print(best_distance)\n",
+        "            # print(best_distance)\n",
         "\n",
         "        temperature *= cooling_rate\n",
         "\n",
@@ -478,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -572,7 +572,7 @@
         "        history.append(len(population))      \n",
         "        population = mutation(population, mutation_rate)\n",
         "        history.append(len(population))\n",
-        "        print(population)\n",
+        "        # print(population)\n",
         "\n",
         "    \n",
         "    best_path = min(population, key=lambda path: calculate_total_distance(path, cities))\n",
@@ -597,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "FmDVvyLOnVGL"
       },
@@ -608,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "vbf9PTKKnGLV"
       },
@@ -623,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "TdPbzlcHkkdH"
       },
@@ -663,7 +663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "zZgIg5fWjKBO"
       },
@@ -692,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "Skb8aRVerxrW"
       },
@@ -726,7 +726,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "M8R9R8COYWvZ"
       },
@@ -782,7 +782,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -803,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -824,7 +824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -840,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -858,7 +858,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -876,7 +876,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -897,7 +897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -911,7 +911,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -952,7 +952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "qGO9EkOO6qko"
       },
@@ -977,7 +977,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from tqdm import tqdm"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
       "metadata": {
         "id": "mpXDxZXWDfMu"
       },
@@ -1000,7 +1009,7 @@
         "\n",
         "        print(algoritmo)\n",
         "\n",
-        "        for i in range(n_vezes):\n",
+        "        for i, count in zip(range(n_vezes), tqdm(range(n_vezes))):\n",
         "            df = None\n",
         "            # if algoritmo != 'Genetic Algorithm':\n",
         "            custo, solucao, historico = funcao_algoritmo(tsp)\n",
@@ -1037,7 +1046,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1065,7 +1074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1073,7 +1082,22 @@
         "id": "Beih4wDh9iSI",
         "outputId": "b3a8ff48-a43e-497d-f404-9cfa7c130173"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hill-Climbing\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  0%|          | 2/1000 [00:14<2:03:38,  7.43s/it]"
+          ]
+        }
+      ],
       "source": [
         "###################################\n",
         "# PROBLEMA GERADO ALEATORIAMENTE  #\n",
@@ -1081,7 +1105,7 @@
         "\n",
         "# cria instancia do problema com n cidades\n",
         "\n",
-        "n_cidades=35\n",
+        "n_cidades=30\n",
         "df_coordenadas = gera_coordenadas_aleatorias(n_cidades)\n",
         "tsp = gera_problema_tsp(df_coordenadas)\n",
         "\n",
